hphp/hack/test/typecheck/ffp/yield_bad2.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): void {
  $x = $y = yield 2;
}
